Add prepare script